--- a/test.ipynb
+++ b/test.ipynb
@@ -176,19 +176,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "矩阵的行列式是: 2.0\n"
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
      ]
     }
    ],
    "source": [
-    "calhls(2,-3,1,1,-1,3,1,-2,0)"
+    "for i in reversed(range(1,5)):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------\n",
+      " 0  -2  -3  -4  -5  -4  -3  -2  -1  \n",
+      "-1   0   0   0   0   0   0   0   0  \n",
+      " 0  -6   0   0   0   0   0  -6   0  \n",
+      "-7   0  -7   0  -7   0  -7   0  -7  \n",
+      " 0   0   0   0   0   0   0   0   0  \n",
+      " 0   0   0   0   0   0   0   0   0  \n",
+      " 7   0   7   0   7   0   7   0   7  \n",
+      " 0   6   0   0   0   0   0   6   0  \n",
+      " 0   0   0   0   0   0   0   0   0  \n",
+      " 1   2   3   4   5   4   3   2   1  \n",
+      "------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "from ChineseChess import Table\n",
+    "table1 = Table.Table()\n",
+    "table1.place((0,0,1),(0,1,2),(3,2,5),(5,5,\"rju\"))\n",
+    "#table1.show()\n",
+    "table1.clear()\n",
+    "table1.initial(1)\n",
+    "#table1.show()\n",
+    "table1.go((0,0,-1),(1,0))\n",
+    "table1.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------\n",
+      " 0  -2   0   0   0  -4   0  -2  -1  \n",
+      "-1   0   0  -5   0   0   0   0   0  \n",
+      " 0   0   0  -4  -3   0   0   0   0  \n",
+      " 0   0  -7   0  -7   0  -7  -6  -7  \n",
+      " 0   0   0   0   0   0  -3   0   0  \n",
+      " 0  -7   0   0   0   0   0   0   0  \n",
+      " 7   0   7   0   7   0   7   0   7  \n",
+      " 0   6   0   0   0   0   0   6   0  \n",
+      " 0   0   0   0   0   0   0   0   0  \n",
+      " 1  -6   3   4   5   4   3   2   1  \n",
+      "------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(6, 1), (5, 0), (5, 2)]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#table1.whereCanGo((3,0,-7))\n",
+    "table1.go((5,0,-7),(5,1))\n",
+    "table1.show()\n",
+    "table1.whereCanGo((5,1,-7))"
    ]
   },
   {
